# GlucoPy

./: .buildinfo  .gitignore  README.md  examples.ipynb  genindex.html  glucopy.Gframe.html  glucopy.data.html  glucopy.html  glucopy.io.html  glucopy.metrics.html  glucopy.plot.html  glucopy.utils.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
_sources/: glucopy.Gframe.rst.txt  glucopy.io.rst.txt  glucopy.plot.rst.txt  glucopy.rst.txt  glucopy.utils.rst.txt
_static/: copybutton.js  custom.css
api/: glucopy.Gframe.adrr.html  glucopy.Gframe.auc.html  glucopy.Gframe.bgi.html  glucopy.Gframe.conga.html  glucopy.Gframe.convert_unit.html  glucopy.Gframe.cv.html  glucopy.Gframe.dfa.html  glucopy.Gframe.dt.html  glucopy.Gframe.fd.html  glucopy.Gframe.grade.html  glucopy.Gframe.gvp.html  glucopy.Gframe.hbgi.html  glucopy.Gframe.html  glucopy.Gframe.iqr.html  glucopy.Gframe.lbgi.html  glucopy.Gframe.mag.html  glucopy.Gframe.mage.html  glucopy.Gframe.mard.html  glucopy.Gframe.mean.html  glucopy.Gframe.modd.html  glucopy.Gframe.mse.html  glucopy.Gframe.pcv.html  glucopy.Gframe.qscore.html  glucopy.Gframe.quantile.html  glucopy.Gframe.samp_en.html  glucopy.Gframe.std.html  glucopy.Gframe.summary.html  glucopy.Gframe.tir.html  glucopy.data.html  glucopy.disjoin_days_and_hours.html  glucopy.metrics.auc.html  glucopy.metrics.bgi.html  glucopy.metrics.conga.html  glucopy.metrics.cv.html  glucopy.metrics.dfa.html  glucopy.metrics.dt.html  glucopy.metrics.fd.html  glucopy.metrics.grade.html  glucopy.metrics.gvp.html  (+30 more)
(+164 files in other folders)
